--- a/styles.css
+++ b/styles.css
@@ -828,7 +828,7 @@ video {
     .wrapper h2 {
         margin: 1.5rem 0;
         text-align: center;
-        color: #002496;
+        color: #3AEAFA;
         font-size: 20px; /* Reduce font size for better mobile readability */
     }
 
